# pipelineDensityMapCountAndMeasureFish

./: README.md  pyproject.toml
src/fish_pipeline/: __init__.py
src/fish_pipeline/data/: entities.py
src/fish_pipeline/models/: density.py
src/fish_pipeline/pipelines/: __init__.py  base.py  inference.py  training.py
src/fish_pipeline/steps/: density.py  measurement.py  peaks.py  preprocessing.py  qc.py  segmentation.py
src/fish_pipeline/utils/: calibration.py  geometry.py
tests/: test_inference_pipeline.py  test_measurement_strategies.py  test_training_pipeline.py
